# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import projectsRouter from "./projects";
+import contactRouter from "./contact";
+import adminRouter from "./admin";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(projectsRouter);
+router.use(contactRouter);
+router.use(adminRouter);
+router.use(statsRouter);
 
 export default router;
